logs/Slang/generated/keywords/5.6.2--keyword_always_comb.sv.log
name: always_comb
description: The 'always_comb' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always_comb.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always_comb.sv:8:8: error: expected declarator
    bit always_comb;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always_comb.sv:8:20: error: expected statement
    bit always_comb;
                   ^
